@@ -1,4 +1,9 @@
 
+2022-02-06  Ron Norman <rjn@inglenet.com>
+
+	* codegen.c: If line or verb changes then emit trace/debug code
+	* tree.c: If source_line not defined for UNTIL then use current line
+
 2022-01-28  Simon Sobisch <simonsobisch@gnu.org>
 
 	* typeck.c (cb_emit_write): changed configuration check and warning
